@@ -1,5 +1,12 @@
 2011-07-25  Ojan Vafai  <ojan@chromium.org>
 
+        Minor tweak to wrap label elements as atomic units.
+
+        * TestResultServer/static-dashboards/dashboard_base.js:
+        * TestResultServer/static-dashboards/flakiness_dashboard.html:
+
+2011-07-25  Ojan Vafai  <ojan@chromium.org>
+
         always show flakiness details on the builder page
         https://bugs.webkit.org/show_bug.cgi?id=65139
 
